updated build folder

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,21 +20,18 @@ jobs:
 
       - name: Build
         run: |
-          mkdir build
-          cd build
-          cmake .. -G "MinGW Makefiles"
-          mingw32-make
+          cmake -B build -G "MinGW Makefiles"
+          cmake --build build
 
       - name: Deploy Qt dependencies (windeployqt)
         run: |
           $env:Path += ";$Env:Qt6_DIR/bin"
-          & "$Env:Qt6_DIR/bin/windeployqt.exe" build\MyQtApp.exe
-          & "$Env:Qt6_DIR/bin/windeployqt.exe" build\ChatServer.exe
+          & "$Env:Qt6_DIR/bin/windeployqt.exe" bin\MyQtApp.exe
+          & "$Env:Qt6_DIR/bin/windeployqt.exe" bin\ChatServer.exe
 
       - name: Zip deployment folder
         run: |
-          cd build
-          Compress-Archive -Path * -DestinationPath ../chat-windows-deploy.zip
+          Compress-Archive -Path bin\* -DestinationPath chat-windows-deploy.zip
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
