--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,11 +31,11 @@ jobs:
 
       - name: Zip deployment folder
         run: |
-          Compress-Archive -Path bin\*,*.dll,*.exe -DestinationPath deploy.zip
+          Compress-Archive -Path bin\*,*.dll,*.exe -DestinationPath deploy-windows.zip
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
-          files: deploy.zip
+          files: deploy-windows.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
