--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,26 +1,30 @@
-name: Build and Release Linux
+name: release
 
 on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
 
 jobs:
-  build:
+  build_release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install Qt and dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y qt6-base-dev qt6-base-dev-tools cmake g++ wget patchelf
+          sudo apt-get install -y qt6-base-dev qt6-base-dev-tools cmake g++ wget patchelf zip
 
-      - name: Build
+      - name: Build Linux binaries
         run: |
           cmake -B build
           cmake --build build
+          mkdir -p release
+          cp -r bin release/linux-bin
 
       - name: Download linuxdeployqt
         run: |
@@ -35,13 +39,31 @@ jobs:
         run: |
           ./linuxdeployqt bin/ChatServer -appimage || true
 
-      - name: Zip deployment folder
+      - name: Zip Linux deployment
         run: |
-          zip -r deploy-linux.zip bin/ *.AppImage
+          zip -r release/linux-deploy.zip bin/ *.AppImage
 
-      - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
+      # Optionally, cross-compile or build Windows binaries here, or use a separate job on windows-latest
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         with:
-          files: deploy-linux.zip
+          draft: false
+          prerelease: false
+          release_name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Linux artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: release/linux-deploy.zip
+          asset_name: linux-deploy.zip
+          asset_content_type: application/zip
+
+      # Add similar steps for Windows artifacts if you build them in this job or in a separate job
