--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,12 @@ jobs:
 
       - name: Clean build directory
         run: |
-          if exist build rmdir /s /q build
-          mkdir build
+          Remove-Item -Recurse -Force build -ErrorAction SilentlyContinue
+          New-Item -ItemType Directory -Path build
 
       - name: Build Windows binaries
         run: |
-          cmake -B build -G "MinGW Makefiles"
+          cmake -B build -G "MinGW Makefiles" -DCMAKE_EXE_LINKER_FLAGS="-municode"
           cmake --build build
 
       - name: Deploy Qt dependencies (windeployqt)
